# websink

./: .clinerules  .gitignore  Cargo.toml  LICENSE  MANIFEST.in  MULTI_STREAM_ARCHITECTURE.md  README.md  go.mod  go.sum  gs_web.html  gs_web.js  gstreamer_file.py  install_and_test.sh  lib.rs  main.rs  pyproject.toml  run_websink.py  rust-toolchain.toml  rustfmt.toml  scailxwebsink.py  test.sh  test_webrtcwebsink.py  websink.go
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: go.yml  rust.yml
docs/: dependency-analysis.md
gstreamer-send/: go.mod  main.go
gstreamer-send/static/: index.html
libwebsink/: .clinerules  .gitignore  go.mod  libwebsink.h  scailxwebsink.py  websink.go  zzgenerated_plugin.go
libwebsink/static/: demo.js  index.html
static/: index.html  stream.js
test/: selenium_test.py
tests/: port_selection_test.rs  selenium_test.py  websink_stream.rs
webrtcwebsink/: __init__.py  http_server.py  plugin.py  signaling.py
webrtcwebsink/static/: index.html  webrtc.js
websink/: .clinerules  go.mod  go.sum  imp.rs  mod.rs  server.rs  websink.go
websink/static/: demo.js  index.html
