[package]
name = "gst-plugin-websink"
version = "0.1.0"
edition = "2021"
authors = ["Videology Inc <info@videology.com>"]
license = "MIT"
description = "GStreamer WebRTC sink plugin in Rust"
repository = "https://github.com/videologyinc/websink"

[lib]
name = "gstwebsink"
crate-type = ["cdylib"]
path = "lib.rs"

[[bin]]
name = "test-rswebsink"
path = "main.rs"

[dependencies]
gst = { package = "gstreamer", version = "0.23.6" }
gst-base = { package = "gstreamer-base", version = "0.23.6" }
gst-video = { package = "gstreamer-video", version = "0.23.6" }
webrtc = "0.13.0"
tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
anyhow = "1.0.98"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4"] }
log = "0.4.27"
bytes = "1.10.1"
warp = "0.3"
rust-embed = "8.0"
mime_guess = "2.0.5"
ctrlc = "3.4.4"
clap = { version = "4.5.38", features = ["derive"] }
failure = "0.1.8"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 3   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
