[package]
name = "gst-plugin-websink"
version = "0.2.2"
edition = "2021"
authors = ["Kobus Goosen <info@videology.com>"]
license = "MIT"
description = "GStreamer WebRTC sink plugin in Rust using webrtc-rs and GStreamer Rust bindings"
repository = "https://github.com/videologyinc/websink"

[lib]
name = "websink"
crate-type = ["cdylib", "rlib"]
path = "lib.rs"


[dependencies]
gst = { package = "gstreamer", version = "0.23.6" }
gst-base = { package = "gstreamer-base", version = "0.23.6" }
gst-video = { package = "gstreamer-video", version = "0.23.6" }
webrtc = "0.13.0"
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
anyhow = "1.0.98"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
log = "0.4.27"
bytes = "1.10.1"
warp = "0.3.7"
rust-embed = "8.7.2"
mime_guess = "2.0.5"
ctrlc = "3.4.7"
clap = { version = "4.5.40", features = ["derive"] }
hostname = "0.4.1"
get_if_addrs = "0.5.3"
failure = "0.1.8"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 3   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*

[features]
# GStreamer 1.22 or later is required for static linking
static = ["gst/v1_22"]
capi = []

[dev-dependencies]
webbrowser = "1.0.4"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

