[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webrtcwebsink"
version = "0.1.0"
description = "GStreamer WebRTC Web Sink Plugin"
readme = "README.md"
authors = [
    {name = "Kobus", email = "info@videologyinc.com"}
]
license = {text = "LGPL-2.1"}
requires-python = ">=3.7"
dependencies = [
    "websockets",
    "pygobject",
    "termcolor",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest-selenium",
    "pytest",
    "webdriver-manager",
]

[tool.setuptools]
packages = ["webrtcwebsink"]
package-data = {"webrtcwebsink" = ["static/*"]}
